--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Create Tailwind</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
-
+<!--aaa-->
   <body
     class="h-screen bg-gradient-to-b from-gray-900 to-slate-800 flex flex-col text-white"
   >
