--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crypto Market Analysis Tool</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body class="bg-gray-100 font-sans">
@@ -18,6 +18,7 @@
                     <li><a href="#" id="trends-link" class="hover:underline">Trends Analysis</a></li>
                     <li><a href="#" id="sentiment-link" class="hover:underline">Market Sentiment</a></li>
                     <li><a href="#" id="alerts-link" class="hover:underline">Custom Alerts</a></li>
+                    <li><a href="#" id="wallet-link" class="hover:underline">Wallet</a></li>
                     <li><a href="#" id="profile-link" class="hover:underline">Profile</a></li>
                 </ul>
             </nav>
@@ -39,6 +40,10 @@
         <section id="alerts" class="content-section hidden">
             <h2 class="text-3xl font-bold mb-4">Custom Alerts</h2>
             <div id="custom-alerts" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"></div>
+        </section>
+        <section id="wallet" class="content-section hidden">
+            <h2 class="text-3xl font-bold mb-4">Wallet</h2>
+            <div id="wallet-section" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"></div>
         </section>
         <section id="profile" class="content-section hidden">
             <h2 class="text-3xl font-bold mb-4">User Profile</h2>
